--- a/vignettes/Inbred_Based_Populations.Rmd
+++ b/vignettes/Inbred_Based_Populations.Rmd
@@ -10,9 +10,6 @@ vignette: >
 ---
 
 ```{r knitr_init, echo=FALSE, cache=FALSE, message=FALSE, cache.comments=FALSE, comment=FALSE, warning=FALSE}
-library(knitr)
-library(rmarkdown)
-
 knitr::opts_chunk$set(collapse = TRUE,
                       comment = "#>",
                       fig.width = 6,
@@ -1360,15 +1357,10 @@ Let's draw all three groups built:
 
 ```{r, eval=FALSE, results='hide', eval=FALSE}
 draw_map2(LG1_f2_final, LG2_f2_final, main = "Only linkage information", 
-          group.names = c("LG1", "LG2", "LG3"))
+          group.names = c("LG1", "LG2", "LG3"), output = "map.eps")
 ```
 
-```{r, echo=FALSE, results='hide', echo=FALSE}
-draw_map2(LG1_f2_final, LG2_f2_final, main = "Only linkage information", 
-          group.names = c("LG1", "LG2", "LG3"), output = "map.png")
-```
-
-<img src="map.png" width="300" height="400">
+*NOTE*: Check the [GitHub vignette version](https://statgen-esalq.github.io/tutorials/onemap/Inbred_Based_Populations.html) to visualize the graphic.
 
 You can include all `sequence` objects referring to the groups as the first arguments. The `main` argument defines the main title of the draw and `group.names` define the names of each group. If no `output` file and file extension is defined, the draw will be generated at your working directory as `map.eps`. The eps extension is only the default option but there are others that can be used. You can have access to a list of them on the help page.
 
@@ -1378,11 +1370,7 @@ We also can draw a map for a specific linkage group:
 draw_map2(LG1_f2_final, col.group = "#58A4B0", col.mark = "#335C81", output = "map_LG1.pdf")
 ``` 
 
-```{r, results='hide', echo=FALSE}
-draw_map2(LG1_f2_final, col.group = "#58A4B0", col.mark = "#335C81", output = "map_LG1.png")
-``` 
-
-<img src="map_LG1.png" width="200" height="400">
+*NOTE*: Check the [GitHub vignette version](https://statgen-esalq.github.io/tutorials/onemap/Inbred_Based_Populations.html) to visualize the graphic.
 
 You can also change the default colors using the `col.group` and `col.mark` arguments.
 
