--- a/vignettes/Introduction_R.Rmd
+++ b/vignettes/Introduction_R.Rmd
@@ -10,6 +10,9 @@ vignette: >
 ---
 
 ```{r knitr_init, echo=FALSE, cache=FALSE}
+library(knitr)
+library(rmarkdown)
+
 knitr::opts_chunk$set(collapse = TRUE,
                       comment = "#>",
                       fig.width = 6,
